# file-guard

./: .gitignore  Cargo.toml  README.md
.github/workflows/: verify.yml
examples/: test-tool.rs
src/: lib.rs  unix.rs  windows.rs
src/os/: mod.rs  unix.rs  windows.rs
tests/: lock.rs  lock_any.rs  pipeline.rs  try_lock.rs
