[package]
name = "file-guard"
version = "0.1.0"
keywords = ["file-guard", "guard", "file-lock", "fcntl", "LockFile", "LockFileEx"]
authors = ["Jeremy Larkin <jeremylarkin@gmail.com>"]
edition = "2018"

[dependencies]
cfg-if = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winerror", "minwinbase", "minwindef", "fileapi"] }

[dev-dependencies]
#vmap = "0.4.2"
vmap = { git = "https://github.com/kalamay/vmap-rs", branch = "volatile" }
