[package]
name = "file-guard"
version = "0.1.0"
keywords = ["file-guard", "guard", "file-lock", "fcntl", "LockFile", "LockFileEx"]
authors = ["Jeremy Larkin <jeremylarkin@gmail.com>"]
edition = "2021"

[dependencies]
cfg-if = "1.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.109"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winerror", "minwinbase", "minwindef", "fileapi"] }

[dev-dependencies]
vmap = "0.5"
